// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Tile Action Tile 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-tile"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="fd-tile__content"
    >
      <h3
        className="fd-tile__title"
      >
        Tile Title
      </h3>
    </div>
    <div
      className="fd-tile__actions"
      onClick={[Function]}
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-200"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-button fd-button--transparent sap-icon--vertical-grip"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Tile Media Tile 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-tile"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="fd-tile__media"
    >
      <span
        className="fd-image--m"
        style={
          Object {
            "backgroundImage": "url(./assets/nature.jpg)",
          }
        }
      />
    </div>
    <div
      className="fd-tile__content"
    >
      <h3
        className="fd-tile__title"
      >
        Tile Title
      </h3>
    </div>
  </div>
  <br />
  <div
    className="fd-tile"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="fd-tile__media"
    >
      <span
        className="fd-image--l fd-image--circle"
        style={
          Object {
            "backgroundImage": "url(./assets/nature.jpg)",
          }
        }
      />
    </div>
    <div
      className="fd-tile__content"
    >
      <h3
        className="fd-tile__title"
      >
        Tile Title
      </h3>
      <p>
        Tile Description
      </p>
    </div>
  </div>
  <br />
  <div
    className="fd-tile"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="fd-tile__media"
    >
      <span
        className="fd-identifier fd-identifier--m sap-icon--home fd-has-background-color-accent-3"
        role="presentation"
      />
    </div>
    <div
      className="fd-tile__content"
    >
      <h3
        className="fd-tile__title"
      >
        Tile Title
      </h3>
      <p>
        Tile Description
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Tile Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-tile"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="fd-tile__media"
    >
      <div>
        Tile Media here
      </div>
    </div>
    <div
      className="fd-tile__content"
    >
      <h3
        className="fd-tile__title"
      >
        Tile Title
      </h3>
      <p>
        Tile Description
      </p>
    </div>
    <div
      className="fd-tile__actions"
      onClick={[Function]}
    >
      <div>
        Tile Actions here
      </div>
    </div>
  </div>
  <div
    className="fd-product-tile"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="fd-product-tile__media"
      style={
        Object {
          "backgroundImage": "url(./assets/nature-2.jpg)",
        }
      }
    />
    <div
      className="fd-product-tile__content"
    >
      <h3
        className="fd-product-tile__title"
      >
        Product Tile Title
      </h3>
      <p>
        Product Tile Description
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Tile Product Tile 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-product-tile"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="fd-product-tile__media"
      style={
        Object {
          "backgroundImage": "url(./assets/nature-2.jpg)",
        }
      }
    />
    <div
      className="fd-product-tile__content"
    >
      <h3
        className="fd-product-tile__title"
      >
        Tile Title
      </h3>
      <p>
        Tile Description
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Tile Simple Tile 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-tile"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="fd-tile__content"
    >
      <h3
        className="fd-tile__title"
      >
        Tile Title
      </h3>
      <p>
        Tile Description
      </p>
    </div>
  </div>
</div>
`;
